[gd_scene load_steps=26 format=3 uid="uid://dko6syds2j81d"]

[ext_resource type="Script" path="res://levels/level.gd" id="1_cklow"]
[ext_resource type="PackedScene" uid="uid://chxd1muqmud8w" path="res://level_parts/building_blocks/floor_01.tscn" id="2_mhbut"]
[ext_resource type="PackedScene" uid="uid://bg13w8tx0i5e0" path="res://level_parts/building_blocks/wall_01.tscn" id="3_x1tif"]
[ext_resource type="PackedScene" uid="uid://dhp6yf0e27h62" path="res://level_parts/building_blocks/ceiling_02.tscn" id="4_ae155"]
[ext_resource type="PackedScene" uid="uid://nbtpy06ouaab" path="res://level_parts/lab/lab_01.tscn" id="5_ayytd"]
[ext_resource type="PackedScene" uid="uid://terq7ea5w6yt" path="res://level_parts/building_blocks/kill_zone.tscn" id="5_oysgp"]
[ext_resource type="PackedScene" uid="uid://cy7pct6fyxcjj" path="res://level_parts/building_blocks/auto_door.tscn" id="7_ohxgk"]
[ext_resource type="PackedScene" uid="uid://b21lfcey82x68" path="res://models/corridors/ceiling_lamp.tscn" id="8_lhlfp"]
[ext_resource type="PackedScene" uid="uid://b11vbq1vhr43u" path="res://menu/button_3d.tscn" id="10_0ckhs"]
[ext_resource type="PackedScene" uid="uid://cbpb8uge67xox" path="res://level_parts/lab/nutella.tscn" id="10_oe0q2"]
[ext_resource type="Script" path="res://menu/character_screen.gd" id="10_pyh85"]
[ext_resource type="Script" path="res://levels/Spread.gd" id="10_rparp"]
[ext_resource type="PackedScene" uid="uid://de2c0xkpcenxk" path="res://menu/character_panel.tscn" id="10_sxlsf"]
[ext_resource type="Script" path="res://levels/rotor.gd" id="11_eyt71"]
[ext_resource type="PackedScene" uid="uid://efdij6qskdlt" path="res://menu/character_perk.tscn" id="12_elfhs"]
[ext_resource type="Texture2D" uid="uid://dst4v0htyn0kb" path="res://tutorial.png" id="13_y73h3"]
[ext_resource type="PackedScene" uid="uid://qhshaqrg0h50" path="res://levels/spore_placer.tscn" id="14_e2gvq"]
[ext_resource type="Script" path="res://levels/game_start.gd" id="17_0pntl"]

[sub_resource type="BoxShape3D" id="BoxShape3D_i01np"]
size = Vector3(44.643, 21.4832, 37.6189)

[sub_resource type="BoxShape3D" id="BoxShape3D_cndy0"]
size = Vector3(25, 0.6, 20)

[sub_resource type="QuadMesh" id="QuadMesh_4o0op"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_o8r0w"]
emission_enabled = true
emission = Color(0.211765, 0.211765, 0.211765, 1)

[sub_resource type="QuadMesh" id="QuadMesh_3e3pc"]
size = Vector2(1.675, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_bx7ro"]
shading_mode = 0
albedo_color = Color(1, 0.305882, 0.239216, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_80gvr"]

[node name="Chamber" type="Node3D" node_paths=PackedStringArray("level_in", "level_out")]
script = ExtResource("1_cklow")
level_in = NodePath("LevelIn")
level_out = NodePath("LevelOut")

[node name="LevelIn" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 25.9939, 0, 1.99227)

[node name="Floor57" parent="LevelIn" instance=ExtResource("2_mhbut")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.99392, 0, -1.99227)

[node name="Floor58" parent="LevelIn" instance=ExtResource("2_mhbut")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.99392, 0, 2.00773)

[node name="Floor59" parent="LevelIn" instance=ExtResource("2_mhbut")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.99392, 0, -1.99227)

[node name="Floor60" parent="LevelIn" instance=ExtResource("2_mhbut")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.99392, 0, 2.00773)

[node name="Wall26" parent="LevelIn" instance=ExtResource("3_x1tif")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -5.99392, 0, 2.00773)

[node name="Wall27" parent="LevelIn" instance=ExtResource("3_x1tif")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -1.99392, 0, 2.00773)

[node name="Ceiling" parent="LevelIn/Wall27" instance=ExtResource("4_ae155")]

[node name="Ceiling2" parent="LevelIn/Wall27" instance=ExtResource("4_ae155")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 0, 0)

[node name="Ceiling3" parent="LevelIn/Wall27" instance=ExtResource("4_ae155")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.38419e-07, 0, 4)

[node name="Ceiling4" parent="LevelIn/Wall27" instance=ExtResource("4_ae155")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 0, 4)

[node name="Wall20" parent="LevelIn" instance=ExtResource("3_x1tif")]
transform = Transform3D(1.31134e-07, 0, 1, 0, 1, 0, -1, 0, 1.31134e-07, -5.98839, 0, -1.97798)

[node name="Wall21" parent="LevelIn" instance=ExtResource("3_x1tif")]
transform = Transform3D(1.31134e-07, 0, 1, 0, 1, 0, -1, 0, 1.31134e-07, -1.98839, 0, -1.97798)

[node name="LevelOut" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -22.0061, 0, -26.7077)

[node name="Wall34" parent="LevelOut" instance=ExtResource("3_x1tif")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 6.00608, 0, 1.93235)

[node name="Wall35" parent="LevelOut" instance=ExtResource("3_x1tif")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 2.00608, 0, 1.93235)

[node name="Wall36" parent="LevelOut" instance=ExtResource("3_x1tif")]
transform = Transform3D(1.31134e-07, 0, 1, 0, 1, 0, -1, 0, 1.31134e-07, 2.00608, 0, -2.06765)

[node name="Wall37" parent="LevelOut" instance=ExtResource("3_x1tif")]
transform = Transform3D(1.31134e-07, 0, 1, 0, 1, 0, -1, 0, 1.31134e-07, 6.00608, 0, -2.06765)

[node name="Floor75" parent="LevelOut" instance=ExtResource("2_mhbut")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.00608, 0, 1.93177)

[node name="Floor76" parent="LevelOut" instance=ExtResource("2_mhbut")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.00608, 0, -2.06823)

[node name="Floor77" parent="LevelOut" instance=ExtResource("2_mhbut")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.00608, 0, 1.93177)

[node name="Floor78" parent="LevelOut" instance=ExtResource("2_mhbut")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.00608, 0, -2.06823)

[node name="Ceiling5" parent="LevelOut" instance=ExtResource("4_ae155")]
transform = Transform3D(1, 0, 1.62921e-07, 0, 1, 0, -1.62921e-07, 0, 1, 6.00608, 0, -2.2001)

[node name="Ceiling6" parent="LevelOut" instance=ExtResource("4_ae155")]
transform = Transform3D(1, 0, 1.62921e-07, 0, 1, 0, -1.62921e-07, 0, 1, 6.00608, 0, 1.7999)

[node name="Ceiling7" parent="LevelOut" instance=ExtResource("4_ae155")]
transform = Transform3D(1, 0, 1.62921e-07, 0, 1, 0, -1.62921e-07, 0, 1, 2.00608, 0, -2.2001)

[node name="Ceiling8" parent="LevelOut" instance=ExtResource("4_ae155")]
transform = Transform3D(1, 0, 1.62921e-07, 0, 1, 0, -1.62921e-07, 0, 1, 2.00608, 0, 1.7999)

[node name="lab01" parent="LevelOut" instance=ExtResource("5_ayytd")]
transform = Transform3D(-8.74228e-08, 0, 2, 0, 2, 0, -2, 0, -8.74228e-08, 6, 0, -2)

[node name="PlayerDetector" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 512
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="PlayerDetector"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.54752, 5.53725, -10.8112)
shape = SubResource("BoxShape3D_i01np")

[node name="KillZone" parent="." instance=ExtResource("5_oysgp")]
transform = Transform3D(-25.5, 0, 0, 0, 2.4, 0, 0, 0, 17, -5, -15, -19)

[node name="AutoDoor" parent="." instance=ExtResource("7_ohxgk")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -16.3, 0, -26.7)
window_probability = 0.0

[node name="CeilingLamp" parent="." instance=ExtResource("8_lhlfp")]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, -18.1, 5.73687, -26.9057)

[node name="spore_floor" type="Area3D" parent="."]
collision_layer = 2147483650
collision_mask = 0
monitoring = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="spore_floor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0.2, -26.5)
shape = SubResource("BoxShape3D_cndy0")

[node name="button_character" parent="." instance=ExtResource("10_0ckhs")]
transform = Transform3D(-5.93379e-08, 0, -1.2285, 0, 1.2285, 0, 1.35749, 0, -5.36992e-08, 10.9, 5.9, -21.1)
text = "Research Desk >"
active = true
color = Color(0.313726, 0.694118, 0.713726, 1)
hover_color = Color(0.396078, 0.968627, 0.952941, 1)
background = true
background_width = 1.75
background_color = Color(0.305882, 0.305882, 0.305882, 1)

[node name="button_back" parent="." instance=ExtResource("10_0ckhs")]
transform = Transform3D(-1.35749, 0, 1.07399e-07, 0, 1.2285, 0, -1.18676e-07, 0, -1.2285, 9.2, 5.9, -15.6)
text = "< Back"
active = true
color = Color(0.313726, 0.694118, 0.713726, 1)
hover_color = Color(0.396078, 0.968627, 0.952941, 1)
background = true
background_width = 0.8
background_color = Color(0.305882, 0.305882, 0.305882, 1)

[node name="Screen1" type="MeshInstance3D" parent="."]
transform = Transform3D(-2.89807e-07, 0, -3.9, 0, 3.9, 0, 6.63, 0, -1.70474e-07, 11, 4, -27)
mesh = SubResource("QuadMesh_4o0op")
surface_material_override/0 = SubResource("StandardMaterial3D_o8r0w")

[node name="button3D" parent="Screen1" instance=ExtResource("10_0ckhs")]
transform = Transform3D(0.20475, 0, 1.59872e-14, 0, 0.315, 0, -1.24345e-14, 0, 0.315, -0.180995, -0.282051, 0.0256412)
text = "I understand"
active = true
color = Color(0.94902, 0.470588, 0.188235, 1)
hover_color = Color(1, 0.815686, 0.788235, 1)

[node name="Label3D" type="Label3D" parent="Screen1"]
transform = Transform3D(0.9, 0, 5.32907e-15, 0, 0.9, 0, -4.26326e-14, 0, 0.899999, 0, 0.358974, 0.0256412)
text = "Black Spores"
outline_size = 6

[node name="Label3D3" type="Label3D" parent="Screen1"]
transform = Transform3D(0.63, 0, 1.24345e-14, 0, 0.899999, 0, -7.10543e-14, 0, 0.899999, -0.196078, -0.358974, 0.0256412)
visible = false
modulate = Color(1, 0.447059, 0.231373, 1)
text = "Start"
font_size = 22
outline_size = 6

[node name="MeshInstance3D" type="MeshInstance3D" parent="Screen1/Label3D3"]

[node name="Label3D2" type="Label3D" parent="Screen1"]
transform = Transform3D(0.495, 0, 2.30926e-14, 0, 0.899999, 0, -7.81597e-14, 0, 0.899999, -0.467571, 0, 0.0256412)
text = "The sample is highly aggressive
Keep the jar lid tightly closed at all times
In case of containment breach
 evacuate the facility at once!"
font_size = 18
outline_size = 6
horizontal_alignment = 0

[node name="ScreenCharacter" type="MeshInstance3D" parent="."]
transform = Transform3D(-6.63, 0, 3.40948e-07, 0, 3.9, 0, -5.79613e-07, 0, -3.9, 2, 4, -15.7)
mesh = SubResource("QuadMesh_3e3pc")
surface_material_override/0 = SubResource("StandardMaterial3D_o8r0w")
script = ExtResource("10_pyh85")

[node name="PanelSpeed" parent="ScreenCharacter" instance=ExtResource("10_sxlsf")]
transform = Transform3D(1, 0, -3.90799e-14, 0, 1, 0, -1.13687e-13, 0, 1, -0.301659, 0.410256, 0)

[node name="PanelStamina" parent="ScreenCharacter" instance=ExtResource("10_sxlsf")]
transform = Transform3D(1, 0, -3.90799e-14, 0, 1, 0, -1.13687e-13, 0, 1, -0.301659, 0.282051, 0)
index = 1
trait_name = "Stamina"
alt = "Each level increases max stamina by 5%"

[node name="PanelHacking" parent="ScreenCharacter" instance=ExtResource("10_sxlsf")]
transform = Transform3D(1, 0, -4.61853e-14, 0, 1, 0, -1.42109e-13, 0, 1, -0.301659, 0.0256406, 0)
index = 2
trait_name = "Hacking"
alt = "Each level increases lock picking speed by 10%"

[node name="PanelTeleporter" parent="ScreenCharacter" instance=ExtResource("10_sxlsf")]
transform = Transform3D(1, 0, -4.61853e-14, 0, 1, 0, -1.42109e-13, 0, 1, -0.301659, -0.102565, 0)
index = 3
trait_name = "Teleporter"
alt = "Each level increases teleporter deploy speed by 10%"

[node name="PanelWard" parent="ScreenCharacter" instance=ExtResource("10_sxlsf")]
transform = Transform3D(1, 0, -4.61853e-14, 0, 1, 0, -1.42109e-13, 0, 1, -0.301659, -0.23077, 0)
index = 4
trait_name = "Ward"
alt = "Each level increases ward lifetime by 0.25 seconds"

[node name="PanelStrength" parent="ScreenCharacter" instance=ExtResource("10_sxlsf")]
transform = Transform3D(1, 0, -4.61853e-14, 0, 1, 0, -1.42109e-13, 0, 1, -0.301659, 0.153845, 0)
index = 5
trait_name = "Strength"
alt = "Each level increases resistance to spore and fall damage"

[node name="Label3D" type="Label3D" parent="ScreenCharacter"]
transform = Transform3D(0.9, 0, -1.06581e-14, 0, 0.9, 0, -1.42109e-13, 0, 0.899999, -0.301659, 0.358974, 0.0256386)
visible = false
text = "Black Spores"
outline_size = 6

[node name="Label3D3" type="Label3D" parent="ScreenCharacter"]
transform = Transform3D(0.63, 0, -3.55271e-15, 0, 0.899999, 0, -7.10543e-14, 0, 0.899999, -0.497737, -0.358974, 0.0256386)
visible = false
modulate = Color(1, 0.447059, 0.231373, 1)
text = "Start"
font_size = 22
outline_size = 6

[node name="MeshInstance3D" type="MeshInstance3D" parent="ScreenCharacter/Label3D3"]

[node name="RP" type="Label3D" parent="ScreenCharacter"]
transform = Transform3D(0.272, 0, 5.93303e-13, 0, 0.782, 0, -2.16716e-13, 0, 0.782, -0.0625171, -0.359999, 0.0393815)
text = "999 Research Points"
font_size = 18
outline_size = 6
horizontal_alignment = 0

[node name="tip" type="Label3D" parent="ScreenCharacter"]
transform = Transform3D(0.295, 0, 1.01252e-13, 0, 0.536, 0, -8.52651e-14, 0, 0.536, -0.76923, -0.384615, 0.0256376)
text = "Each level increases character base speed by 3%"
font_size = 18
outline_size = 6
horizontal_alignment = 0

[node name="PerkBoots1" parent="ScreenCharacter" instance=ExtResource("12_elfhs")]
transform = Transform3D(0.7, 0, -1.06581e-14, 0, 0.7, 0, -1.42109e-13, 0, 0.7, -0.0165521, 0.128205, 0.0422201)
tag = "Enhanced Boots "
tip = "Antigrav Boots prevent death from fall damage"

[node name="PerkStamina1" parent="ScreenCharacter" instance=ExtResource("12_elfhs")]
transform = Transform3D(0.7, 0, -1.06581e-14, 0, 0.7, 0, -1.49214e-13, 0, 0.7, -0.016552, 0.0172499, 0.0422201)
index = 1
tag = "Cumulative Effect "
tip = "Energy Boost powerups increase stamina recovery rate"
price = 15

[node name="PerkHacking1" parent="ScreenCharacter" instance=ExtResource("12_elfhs")]
transform = Transform3D(0.7, 0, -1.06581e-14, 0, 0.7, 0, -1.49214e-13, 0, 0.7, -0.016552, -0.0943434, 0.0422201)
index = 2
tag = "Bruteforce Boost "
tip = "Lockpicking is 2x faster under energy boost effects"
price = 15

[node name="PerkTele1" parent="ScreenCharacter" instance=ExtResource("12_elfhs")]
transform = Transform3D(0.7, 0, -1.06581e-14, 0, 0.7, 0, -1.49214e-13, 0, 0.7, -0.0165518, -0.203788, 0.0422201)
index = 3
tag = "Energy Shift "
tip = "Teleporting provides a short time energy boost"

[node name="PerkWard1" parent="ScreenCharacter" instance=ExtResource("12_elfhs")]
transform = Transform3D(0.7, 0, -1.06581e-14, 0, 0.7, 0, -1.49214e-13, 0, 0.7, -0.0165518, -0.309737, 0.0422201)
index = 4
tag = "Smart Wards "
tip = "Wards can hack digital locks"

[node name="Screen2" type="MeshInstance3D" parent="."]
transform = Transform3D(-2.89807e-07, 0, -3.9, 0, 3.9, 0, 6.63, 0, -1.70474e-07, 11, 4, -27)
visible = false
mesh = SubResource("QuadMesh_3e3pc")
surface_material_override/0 = SubResource("StandardMaterial3D_o8r0w")

[node name="Label3D" type="Label3D" parent="Screen2"]
transform = Transform3D(0.315, 0, 7.99361e-15, 0, 0.315, 0, -4.08562e-14, 0, 0.314999, -0.196078, 0.384615, 0.0256412)
text = "Containment status: "
outline_size = 6

[node name="Spread" type="Label3D" parent="Screen2"]
transform = Transform3D(0.315, 0, 9.76996e-15, 0, 0.315, 0, -4.44089e-14, 0, 0.314999, 0.271494, 0.384615, 0.0256412)
modulate = Color(1, 0.341176, 0.262745, 1)
text = "IT'S SPREADING"
outline_size = 6
script = ExtResource("10_rparp")

[node name="Label3D3" type="Label3D" parent="Screen2"]
transform = Transform3D(0.315, 0, 9.76996e-15, 0, 0.315, 0, -4.44089e-14, 0, 0.314999, -0.196078, -0.384615, 0.0256412)
text = "Containment status: "
outline_size = 6

[node name="Spread2" type="Label3D" parent="Screen2"]
transform = Transform3D(0.315, 0, 1.06581e-14, 0, 0.315, 0, -4.79616e-14, 0, 0.314999, 0.271494, -0.384615, 0.0256412)
modulate = Color(1, 0.341176, 0.262745, 1)
text = "IT'S SPREADING"
outline_size = 6
script = ExtResource("10_rparp")

[node name="Label3D2" type="Label3D" parent="Screen2"]
transform = Transform3D(0.495, 0, 3.19744e-14, 0, 0.899999, 0, -9.23706e-14, 0, 0.899998, -0.226244, 0.025641, 0.0256412)
modulate = Color(1, 0.25098, 0.243137, 1)
text = "RUN"
font_size = 78
outline_size = 6
horizontal_alignment = 0

[node name="MeshInstance3D" type="MeshInstance3D" parent="Screen2"]
transform = Transform3D(1.95654e-16, -4.47605e-09, 0.1024, -0.1024, -4.47605e-09, -1.79707e-23, 4.47605e-09, -0.1024, -4.47605e-09, 0.633484, 0.358974, 0)
material_override = SubResource("StandardMaterial3D_bx7ro")
mesh = SubResource("CapsuleMesh_80gvr")
skeleton = NodePath("../..")
script = ExtResource("11_eyt71")

[node name="SpotLight3D" type="SpotLight3D" parent="Screen2/MeshInstance3D"]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, -0.200001, 0)
light_color = Color(1, 0.239216, 0.137255, 1)
light_energy = 1.849

[node name="SpotLight3D2" type="SpotLight3D" parent="Screen2/MeshInstance3D"]
transform = Transform3D(-1.96837, -0.354244, -0.00681088, -0.354244, 1.9669, 0.0762716, -0.00681122, 0.0762716, -1.99853, 0, -0.200001, 0)
light_color = Color(1, 0.239216, 0.137255, 1)
light_energy = 1.849

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Screen2"]
transform = Transform3D(1.96801e-16, -4.50227e-09, 0.103, -0.103, -4.50227e-09, 4.51899e-23, 4.50227e-09, -0.103, -4.50227e-09, -0.633484, 0.358974, 0)
material_override = SubResource("StandardMaterial3D_bx7ro")
mesh = SubResource("CapsuleMesh_80gvr")
skeleton = NodePath("../..")
script = ExtResource("11_eyt71")

[node name="SpotLight3D" type="SpotLight3D" parent="Screen2/MeshInstance3D2"]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, -0.200001, 0)
light_color = Color(1, 0.239216, 0.137255, 1)
light_energy = 1.849

[node name="SpotLight3D2" type="SpotLight3D" parent="Screen2/MeshInstance3D2"]
transform = Transform3D(-1.96837, -0.354244, -0.00681088, -0.354244, 1.9669, 0.0762716, -0.00681122, 0.0762716, -1.99853, 0, -0.200001, 0)
light_color = Color(1, 0.239216, 0.137255, 1)
light_energy = 1.849

[node name="nutella_container" type="Node3D" parent="."]
transform = Transform3D(0.258819, 0, 0.965926, 0, 1, 0, -0.965926, 0, 0.258819, 9.6, 1.4, -25.3)

[node name="nutella" parent="nutella_container" node_paths=PackedStringArray("door", "screen1", "screen2") instance=ExtResource("10_oe0q2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, 0)
door = NodePath("../../AutoDoor")
screen1 = NodePath("../../Screen1")
screen2 = NodePath("../../Screen2")

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform3D(-0.5, 0, -7.54979e-08, 0, 0.5, 0, 7.54979e-08, 0, -0.5, -8.9182, 3.21839, -15.5928)
modulate = Color(0.709804, 0.827451, 0.890196, 1)
texture = ExtResource("13_y73h3")
region_enabled = true
region_rect = Rect2(0, 152.016, 1024, 742.239)

[node name="SporePlacer" parent="." instance=ExtResource("14_e2gvq")]

[node name="StartingScripts" type="Node3D" parent="."]
script = ExtResource("17_0pntl")

[node name="PlayerPosDefault" type="Node3D" parent="StartingScripts"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 4.2, 2, -27)

[node name="PlayerPosCharacter" type="Node3D" parent="StartingScripts"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 3.1, 2.3, -21)

[connection signal="body_entered" from="PlayerDetector" to="." method="_on_player_entered"]
[connection signal="button_clicked" from="button_character" to="StartingScripts" method="_on_character_button_clicked"]
[connection signal="button_clicked" from="button_back" to="StartingScripts" method="_on_button_back_clicked"]
[connection signal="button_clicked" from="Screen1/button3D" to="nutella_container/nutella" method="_on_start_game"]
